edited home controller

--- a/XinemaProject/XinemaProject/Web.config
+++ b/XinemaProject/XinemaProject/Web.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-XinemaProject-20160216041857.mdf;Initial Catalog=aspnet-XinemaProject-20160216041857;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=xinemaprojectserver.database.windows.net;Initial Catalog=xinemaProjectDB;User ID=team9Admin;Password=Admin123"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -24,6 +24,7 @@
     <authentication mode="None"/>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
+    <customErrors mode="off"></customErrors>
   </system.web>
   <system.webServer>
     <modules>
