--- a/XinemaProject/XinemaProject/XinemaProject.csproj
+++ b/XinemaProject/XinemaProject/XinemaProject.csproj
@@ -206,7 +206,27 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\f1.png" />
+    <Content Include="images\facebook.png" />
+    <Content Include="images\google+.png" />
+    <Content Include="images\header-border.png" />
+    <Content Include="images\in.png" />
+    <Content Include="images\likes.png" />
+    <Content Include="images\link.png" />
     <Content Include="images\logo.png" />
+    <Content Include="images\marker2.png" />
+    <Content Include="images\pintrest.png" />
+    <Content Include="images\play_overlay.png" />
+    <Content Include="images\re.png" />
+    <Content Include="images\rss.png" />
+    <Content Include="images\s1.png" />
+    <Content Include="images\search-icon.png" />
+    <Content Include="images\social-icons.png" />
+    <Content Include="images\star.gif" />
+    <Content Include="images\sub.png" />
+    <Content Include="images\t1.png" />
+    <Content Include="images\twiter.png" />
+    <Content Include="images\views.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="job_scheduling_data_2_0.xsd">
