--- a/XinemaProject/XinemaProject/XinemaProject.csproj
+++ b/XinemaProject/XinemaProject/XinemaProject.csproj
@@ -231,11 +231,14 @@
     <Content Include="images\cart.png" />
     <Content Include="images\cart2.png" />
     <Content Include="images\cart3.png" />
+    <Content Include="images\deadpool.jpg" />
     <Content Include="images\down-arrow.png" />
     <Content Include="images\f-icon.png" />
     <Content Include="images\f-tw.png" />
+    <Content Include="images\GodsofEgypt.jpg" />
     <Content Include="images\header_arrow.png" />
     <Content Include="images\img-sprite.png" />
+    <Content Include="images\janegotagun.jpg" />
     <Content Include="images\left-banner1.jpg" />
     <Content Include="images\list_marker.png" />
     <Content Include="images\logo.png" />
@@ -251,7 +254,11 @@
     <Content Include="images\pic7.jpg" />
     <Content Include="images\pic8.jpg" />
     <Content Include="images\plus.gif" />
+    <Content Include="images\promo1.jpg" />
+    <Content Include="images\promo2.jpg" />
     <Content Include="images\quotes.png" />
+    <Content Include="images\race.jpg" />
+    <Content Include="images\ridealong2.jpg" />
     <Content Include="images\s-img.jpg" />
     <Content Include="images\s-img1.jpg" />
     <Content Include="images\s-img2.jpg" />
@@ -270,6 +277,7 @@
     <Content Include="images\t-img2.jpg" />
     <Content Include="images\t-img3.jpg" />
     <Content Include="images\tag.png" />
+    <Content Include="images\therevenant.jpg" />
     <Content Include="images\zoom.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -340,7 +348,7 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Showtimes\Showtimes.cshtml" />
+    <Content Include="Views\Showtimes\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
