--- a/XinemaProject/XinemaProject/Web.config
+++ b/XinemaProject/XinemaProject/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=xinemaprojectserver.database.windows.net;Initial Catalog=xinemaProjectDB;User ID=team9Admin;Password=Admin123" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=xinemaprojectserver.database.windows.net;Initial Catalog=xinemaProjectDB;User ID=team9Admin;Password=Admin123" providerName="System.Data.SqlClient" />-->
+    <add name="XinemaProjectDB" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\XinemaProjectDB.mdf;Initial Catalog=XinemaProjectDB;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
